<resources>
    <string name="app_name">Saline Singularity</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="gear_dropped">Gear Dropped</string>
    <string name="fail">Failed</string>
    <string name="sucess">Sucess</string>
    <string name="gear_scored">Gear Scored</string>
    <string name="dropped">Dropped</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
</resources>
