<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salinesingularity.singularitytimingapplication.GameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:paddingBottom="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vert_padding">

            <TextView
                android:text="Pickup"
                android:layout_width="@dimen/row_title_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvGearsPickedUp"
                android:layout_weight="1" />

            <Button
                android:text="@string/sucess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPickupS"
                android:layout_weight="1"
                android:backgroundTint="@color/btnGreen"
                android:onClick="onPickupS" />

            <Button
                android:text="@string/fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPickupF"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRed"
                android:onClick="onPickupF" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPikcupCount"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vert_padding">

            <TextView
                android:text="Scored"
                android:layout_width="@dimen/row_title_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvGearsScored"
                android:layout_weight="1" />

            <Button
                android:text="@string/sucess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnScored"
                android:layout_weight="1"
                android:backgroundTint="@color/btnGreen"
                android:onClick="onScoredS" />

            <Button
                android:text="@string/fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDropped"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRed"
                android:onClick="onScoredF" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGearCount"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/vert_padding">

            <TextView
                android:text="@string/dropped"
                android:layout_width="@dimen/row_title_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvDropped"
                android:layout_weight="0.46" />

            <Button
                android:text="@string/gear_dropped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGearDropped"
                android:layout_weight="1"
                android:onClick="onDropped" />

            <TextView
                android:text="0"
                android:layout_height="wrap_content"
                android:id="@+id/tvDropCount"
                android:layout_weight="0.44"
                android:gravity="center"
                android:layout_width="1dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/undo"
                android:layout_width="@dimen/undo_redo_width"
                android:layout_height="wrap_content"
                android:id="@+id/btnUndo"
                android:layout_weight="1"
                android:onClick="onUndo" />

            <Button
                android:text="@string/redo"
                android:layout_width="@dimen/undo_redo_width"
                android:layout_height="wrap_content"
                android:id="@+id/btnRedo"
                android:layout_weight="1"
                android:onClick="onRedo" />
        </LinearLayout>

        <Button
            android:text="End Game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEndGame"
            android:layout_marginTop="100dp"
            android:backgroundTint="#EDDBFF"
            android:onClick="onEndGame" />
    </LinearLayout>
</RelativeLayout>
